# experiment_launcher

./: CMakeLists.txt  README.md  frames.gv  package.xml
config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
include/: floor5_robot1.h  floor5_robot2.h  floor5_robot3.h
include/hmm/: DETree.h  MCFHMM.h  Sample.h  Sampler.h
info/: DAE Path.txt
launch/: 3dsensor.launch  amcl.launch  amcl_1.launch  amcl_2.launch  amcl_demo.launch  amcl_multiple_robots.launch  amcl_multiple_robots_big.launch  amcl_multiple_robots_medium.launch  amcl_multiple_robots_no_traj.launch  amcl_multiple_robots_no_visual.launch  amcl_multiple_robots_small.launch  amcl_no_traj.launch  amcl_no_traj_freenect.launch  amcl_with_two_robots_demo.launch  bringup_turtlebot.launch  cmvision.launch  cmvision_node.launch  ground_truth_publisher.launch  keyboard_teleop_robot.launch  keyboard_teleop_robot_1.launch  minimal.launch  nested_amcl.launch  nested_amcl_demo.launch  nested_amcl_no_traj.launch  three_robots_gazebo_5th_floor.launch  two_robots_gazebo_5th_floor.launch  two_robots_gazebo_5th_floor_no_visual.launch  two_robots_simulation.launch  view_navigation.launch
launch/blob_detection/: box_blue.txt  box_green.txt  box_yellow.txt  colors -red,green and blue.txt  colors---all brown doors values.txt  colors--works.txt  colors--works2.txt  colors-green_cylinder-2.txt  colors-green_cylinder.txt  colors_averages.txt  colors_brown_ doors_final.txt  colors_red_pillar.txt
launch/gmapping/: gmapping_big_map.launch  turtlebot_5th.launch
launch/includes/: amcl.launch.xml  amcl_diff.launch  cmvision_node_robot1.launch.xml  cmvision_node_robot1_yellow.launch.xml  cmvision_node_robot3.launch.xml  create.launch.xml  flat_amcl_one_robot.launch  flat_move_base_one_robot.launch  kobuki.launch.xml  kobuki_box.launch.xml  kobuki_covered.launch.xml  move_base.launch.xml  nested_amcl.launch.xml  nested_amcl_one_robot.launch  nested_amcl_one_robot.launch.xml  nested_move_base_one_robot.launch.xml  single_turtlebot.launch  single_turtlebot_box.launch  single_turtlebot_covered.launch
launch/includes_phys/: 3dsensor.launch.xml  3dsensor_freenect.launch.xml
launch/multi_robot_launch/: one_robot.launch  robots.launch
log_config/: custom_rosconsole.conf
map/: features.txt  features_big.txt  map.pgm  map.yaml  map_big.pgm  map_big.yaml  map_medium.pgm  map_medium.yaml  map_small.yaml
models/: Boyd_5th_floor_brown_doors_final.dae  Boyd_5th_floor_brown_doors_final_bkp.dae
param/: costmap_common_params.yaml  multi_nav_rviz.vcg
robots/: kobuki_circles_kinect_covered.urdf.xacro  kobuki_hexagons_kinect_green.urdf.xacro
rviz/: navigation_robot1.rviz  navigation_two_robots.rviz
scripts/: turtlebot_teleop_key
shellscripts/: .launcher.sh.swp  launcher-with-rviz.sh  launcher.sh  launcher_backup.sh  run_all_experiments.sh  run_in_loop.sh
src/: floor5_robot1.cpp  floor5_robot2.cpp  floor5_robot3.cpp  gazebo_ground_truth.cpp  motion_prediction_node.cpp
worlds/: Boyd 5th floor in feet_wallsup_nofloorimage.dae  Boyd_1st_floor_.world  Boyd_5th_floor_brown_doors.world  Colorful_Map.world  Fifth_Floor.world  boyd_5th_floor_1.world  boyd_5th_floor_2.world  boyd_5th_floor_Ken.world  boyd_5th_floor_corridor_3.world  boyd_5th_floor_corridor_4.world  boyd_5th_floor_parts_1.world
(+25 files in other folders)
